# cookiecutter-python-clean-architecture

./: README.md  cookiecutter.json
{{ cookiecutter.project_name }}/: .coveragerc  .gitignore  .pre-commit-config.yaml  makefile  pyproject.toml
{{ cookiecutter.project_name }}/docker/: docker-compose.yml  docker-entrypoint.sh  dockerfile
{{ cookiecutter.project_name }}/src/: setup.py
{{ cookiecutter.project_name }}/tests/: conftest.py
{{ cookiecutter.project_name }}/tests/e2e/: test_api.py
