[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^20.1.0"
uvicorn = "^0.13.4"
fastapi = "^0.63.0"

[tool.poetry.dev-dependencies]
ipython = "^7.22.0"
pytest = "^6.2.3"
pytest-asyncio = "^0.15.0"
coverage = "^5.5"
black = "^20.8b1"
pre-commit = "^2.12.0"
isort = "^5.8.0"
httpx = "^0.17.1"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
